Logger Mail Basic Use

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,4 +40,13 @@ mybatis.configuration.useGeneratedKeys=true
 mybatis.configuration.mapUnderscoreToCamelCase=true
 
 # logger
-logging.level.cn.edu.bupt.community=debug
+# logging.level.cn.edu.bupt.community=debug
+# logging.file.name=community.log
+
+# MailProperties
+spring.mail.host=smtp.qq.com
+spring.mail.port=465
+spring.mail.username=2237617390@qq.com
+spring.mail.password=abgzczdnblvjecbd
+spring.mail.protocol=smtps
+spring.mail.properties.mail.smtp.ssl.enable=true
