--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,7 +40,7 @@ mybatis.configuration.useGeneratedKeys=true
 mybatis.configuration.mapUnderscoreToCamelCase=true
 
 # logger
-# logging.level.cn.edu.bupt.community=debug
+logging.level.cn.edu.bupt.community=debug
 # logging.file.name=community.log
 
 # MailProperties
@@ -50,3 +50,7 @@ spring.mail.username=2237617390@qq.com
 spring.mail.password=abgzczdnblvjecbd
 spring.mail.protocol=smtps
 spring.mail.properties.mail.smtp.ssl.enable=true
+
+# community
+community.path.domain=http://localhost:8080
+community.path.upload=upload
