--- a/pom.xml
+++ b/pom.xml
@@ -91,9 +91,11 @@
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
 
-
-
-
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-redis -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
 
     </dependencies>
     <dependencyManagement>
