--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -54,3 +54,8 @@ spring.mail.properties.mail.smtp.ssl.enable=true
 # community
 community.path.domain=http://localhost:8080
 community.path.upload=upload
+
+# RedisProperties
+spring.redis.database=0
+spring.redis.host=localhost
+spring.redis.port=6379
