--- a/mysql-config/docker-compose.yml
+++ b/mysql-config/docker-compose.yml
@@ -13,4 +13,4 @@ services:
       MYSQL_DATABASE: community
       MYSQL_ROOT_PASSWORD: root1234
     volumes:
-      - ./my.cnf:/etc/mysql/my.cnf
+      - /home/tingwuren/Documents/IdeaProjects/community/mysql-config/my.cnf:/etc/mysql/my.cnf
